Prevent scrollbars on mobile when submitting form

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -128,6 +128,7 @@
     content: '';
     border-radius: $border-radius;
     inset: -$border-weight;
+    pointer-events: none;
     position: absolute;
   }
 
